# sqlsec

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
demos/: README.md
demos/01-flask-user-search/: SCENARIO.md  views.py
demos/02-auth-review/: SCENARIO.md  login.py
demos/03-analytics-report/: SCENARIO.md  report_builder.py
demos/04-legacy-stored-proc/: SCENARIO.md  get_orders.sql
demos/05-data-migration/: SCENARIO.md  migrate.py
demos/06-ecommerce-filter/: SCENARIO.md  catalog.py
demos/07-batch-etl/: SCENARIO.md  nightly_load.py
demos/08-clean-refactor/: SCENARIO.md  views_fixed.py
demos/09-orm-raw-escape/: SCENARIO.md  queries.py
demos/10-ci-gate/: SCENARIO.md  service.py
docs/: TAINT_ANALYSIS.md
examples/: help.txt  safe.py  taint_flow.py  taint_safe.py  version.txt  vulnerable.py
ports/: README.md
ports/go/: go.mod
ports/go/sqlsec/: sqlsec.go  sqlsec_test.go
ports/rust/: Cargo.toml
ports/rust/src/: lib.rs
ports/ts/: package.json  tsconfig.json
ports/ts/src/: sqlsec.ts
ports/ts/test/: sqlsec.test.ts
sqlsec/: __init__.py  cli.py  deps.py  lessons.py  linter.py  probe.py  rules.py  sarif.py  taint.py
tests/: test_cli.py  test_demos.py  test_deps.py  test_deps_probe_cli.py  test_linter.py  test_passive_extra.py  test_probe.py  test_rules.py  test_sarif.py  test_taint.py  test_taint_cli.py  test_trainer.py  test_vulndb_local.py
