[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognis-sqlsec"
version = "1.0.0"
description = "Defensive SQL-safety linter and interactive trainer for parameterized-query safety."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cognis Digital" }]
maintainers = [{ name = "Cognis Digital" }]
keywords = [
    "sql",
    "sql-injection",
    "security",
    "linter",
    "static-analysis",
    "parameterized-queries",
    "appsec",
    "training",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/cognis-digital/sqlsec"

[project.scripts]
sqlsec = "sqlsec.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["sqlsec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
